# django-snacks

./: README.md  db.sqlite3  pyproject.toml
snacks/: tests.py
snacks_project/: settings.py
static/css/: base.css
templates/: about.html  base.html  home.html
