[tool.poetry]
name = "django-snacks"
version = "0.1.0"
description = ""
authors = ["HishamKhalil1990 <hisham.khalil1990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Django = "^3.2.4"
black = "^21.6b0"
flake8 = "^3.9.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
